Amended Projections to add in an assembly stage
Signed-off-by: rowan <rowan@rowancrowther.me.uk>