@@ -23,17 +23,12 @@ import org.antlr.v4.runtime.CommonTokenStream;
 import org.antlr.v4.runtime.misc.ParseCancellationException;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.jetbrains.annotations.CheckReturnValue;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
-import uk.co.jackoftrades.backend.numerics.Random;
 import uk.co.jackoftrades.backend.parser.grammars.projection.ProjectionGrammar;
 import uk.co.jackoftrades.backend.parser.grammars.projection.ProjectionLexer;
-import uk.co.jackoftrades.frontend.colour.enums.ColourType;
-import uk.co.jackoftrades.middle.combat.enums.ProjectionEnum;
-import uk.co.jackoftrades.middle.combat.enums.ProjectionType;
-import uk.co.jackoftrades.middle.enums.MessageType;
+import uk.co.jackoftrades.backend.parser.projection.ProjectionAssembler;
+import uk.co.jackoftrades.backend.parser.projection.ProjectionParseRecord;
 import uk.co.jackoftrades.middle.game.Projection;
 
 import java.io.IOException;
@@ -87,7 +82,8 @@ public class ProjectionReader implements Reader<Projection> {
 
         ParseErrors errorCatcher = null;
 
-        List<Projection> projections = new ArrayList<>();
+        List<ProjectionParseRecord> records = new ArrayList<>();
+        List<String> errors = new ArrayList<>();
 
         try {
             CharStream input = CharStreams.fromFileName(filename);
@@ -106,82 +102,32 @@ public class ProjectionReader implements Reader<Projection> {
             try {
                 recordCount = Integer.parseInt(output.records);
             } catch (NumberFormatException e) {
-                errorCatcher.add("Invalid number format for declared record count");
+                errors.add("Invalid number format for declared record count");
                 recordCount = -1;
             }
 
             if (recordCount != -1 && recordCount != projectionRecords.size()) {
-                errorCatcher.add("record-count header declares " + recordCount +
+                errors.add("record-count header declares " + recordCount +
                         " but file contains " + projectionRecords.size());
             }
 
             for (List<String> record : projectionRecords) {
+                String lineStr = record.getLast();
                 int line;
                 try {
-                    line = Integer.parseInt(record.getLast());
+                    line = Integer.parseInt(lineStr);
                 } catch (NumberFormatException e) {
-                    errorCatcher.add("Invalid number format for last entry in records List. " +
-                            "Record code: " + record.get(0) + ". Line number: " +
-                            record.getLast());
+                    errors.add("Invalid number format for declared line: " + lineStr +
+                            " Projection code: " + record.getFirst());
                     line = -1;
                 }
 
-                String codeString = record.get(0);
-                ProjectionEnum projCode = resolveCode(line, codeString, errorCatcher);
-                String projName = record.get(1);
-                String type = record.get(2);
-                ProjectionType projType = resolveType(line, type, codeString, errorCatcher);
-                String projDesc = record.get(3);
-                String projPlayerDesc = record.get(4);
-                String projBlindDesc = record.get(5);
-                String projLashDesc = record.get(6);
-                int projNumerator = -1;
-                try {
-                    projNumerator = Integer.parseInt(record.get(7));
-                } catch (NumberFormatException e) {
-                    projNumerator = -1;
-                }
-                int projDenominator = -1;
-                Random projDenominatorDice = null;
-                try {
-                    projDenominator = Integer.parseInt(record.get(8));
-                } catch (NumberFormatException e) {
-                    projDenominatorDice = Random.parseStr(record.get(8));
-                }
-                int projDivisor = -1;
-                try {
-                    projDivisor = Integer.parseInt(record.get(9));
-                } catch (NumberFormatException e) {
-                    projDivisor = -1;
-                }
-                int projDamageCap = -1;
-                try {
-                    projDamageCap = Integer.parseInt(record.get(10));
-                } catch (NumberFormatException e) {
-                    projDamageCap = -1;
-                }
-                String msgt = record.get(11);
-                MessageType projMsgt = msgt.isEmpty() ? null : resolveMsgt(line, msgt, codeString, errorCatcher);
-                boolean projObvious = record.get(12).equals("1");
-                boolean projWillWake = record.get(13).equals("1");
-                String colour = record.get(14);
-                ColourType projColour = resolveColour(line, colour, codeString, errorCatcher);
-                Projection proj;
-
-                if (projDenominatorDice != null)
-                    proj = new Projection(projCode, projName, projType, projDesc, projPlayerDesc,
-                            projBlindDesc, projLashDesc, projNumerator, projDenominatorDice,
-                            projDivisor, projDamageCap, projMsgt, projObvious, projWillWake,
-                            projColour);
-                else
-                    proj = new Projection(projCode, projName, projType, projDesc, projPlayerDesc,
-                            projBlindDesc, projLashDesc, projNumerator, projDenominator,
-                            projDivisor, projDamageCap, projMsgt, projObvious, projWillWake,
-                            projColour);
-
-                projections.add(proj);
+                records.add(new ProjectionParseRecord(record.get(0), record.get(1),
+                        record.get(2), record.get(3), record.get(4), record.get(5),
+                        record.get(6), record.get(7), record.get(8), record.get(9),
+                        record.get(10), record.get(11), record.get(12), record.get(13),
+                        record.get(14), line));
             }
-            errorCatcher.throwIfAny();
         } catch (IOException e) {
             logger.error("Error while loading file {}", filename, e);
             throw e;
@@ -189,124 +135,8 @@ public class ProjectionReader implements Reader<Projection> {
             return new ParseResult<>(List.of(), errorCatcher.getErrors());
         }
 
-        return new ParseResult<>(projections, errorCatcher.getErrors());
-    }
+        List<Projection> projections = new ProjectionAssembler().assemble(records, errors);
 
-    /**
-     * Resolve an uppercase string tag into a {@link ProjectionEnum} value.
-     *
-     * @param line         the line that the projection block with this code in resides
-     *                     on in the lib/gamedata file.
-     * @param code         the string tag to convert to a {@link ProjectionEnum} value.
-     * @param errorCatcher a {@link ParseErrors} catcher to handle any
-     *                     errors arising during the resolution process.
-     * @return a {@link ProjectionEnum} value which is of the form
-     * {@code "PROJ_" + code}
-     * @author Rowan Crowther
-     */
-    @CheckReturnValue
-    @Nullable
-    private ProjectionEnum resolveCode(int line, @NotNull String code,
-                                       @NotNull ParseErrors errorCatcher) {
-        ProjectionEnum result;
-        try {
-            result = ProjectionEnum.valueOf("PROJ_" + code);
-            return result;
-        } catch (IllegalArgumentException e) {
-            errorCatcher.add("Line: " + line + ": Unknown projection code in this Projection block: " + code);
-            return null;
-        }
-    }
-
-    /**
-     * Resolve an uppercase string tag into a {@link ProjectionType} value.
-     *
-     * @param line         the line that the projection block with this code in resides
-     *                     on in the lib/gamedata file.
-     * @param type         the string tag to convert to a {@link ProjectionType} value.
-     * @param code         the string tag of the projection block in the lib/gamedata file
-     *                     that this resolution occurs within.
-     * @param errorCatcher a {@link ParseErrors} catcher to handle any
-     *                     errors arising during the resolution process.
-     * @return a {@link ProjectionType} value which is of the form
-     * {@code "PT_" + type}
-     * @author Rowan Crowther
-     */
-    @CheckReturnValue
-    @Nullable
-    private ProjectionType resolveType(int line, @NotNull String type, @NotNull String code,
-                                       @NotNull ParseErrors errorCatcher) {
-        ProjectionType result;
-        try {
-            result = ProjectionType.valueOf("PT_" + type.toUpperCase());
-            return result;
-        } catch (IllegalArgumentException e) {
-            errorCatcher.add("Line: " + line + ": Unknown projection type in Projection block: " + code);
-            return null;
-        }
-    }
-
-    /**
-     * Resolve an uppercase string tag into a {@link MessageType} value.
-     *
-     * @param line         the line that the projection block with this code in resides
-     *                     on in the lib/gamedata file.
-     * @param msgt         the string tag to convert to a {@link MessageType} value.
-     * @param code         the string tag of the projection block in the lib/gamedata file
-     *                     that this resolution occurs within.
-     * @param errorCatcher a {@link ParseErrors} catcher to handle any
-     *                     errors arising during the resolution process.
-     * @return a {@link MessageType} value which is of the form
-     * {@code "MSG_" + msgt}
-     * @author Rowan Crowther
-     */
-    @CheckReturnValue
-    @Nullable
-    private MessageType resolveMsgt(int line, @NotNull String msgt, @NotNull String code,
-                                    @NotNull ParseErrors errorCatcher) {
-        MessageType result;
-        try {
-            result = MessageType.valueOf("MSG_" + msgt.toUpperCase());
-            return result;
-        } catch (IllegalArgumentException e) {
-            errorCatcher.add("Unknown projection message type in Projection block: " + code +
-                    " Starting at line: " + line);
-            return null;
-        }
-    }
-
-    /**
-     * Resolve a potentially mixed case string tag into a
-     * {@link ColourType} value.
-     *
-     * @param line         the line that the projection block with this code in resides
-     *                     on in the lib/gamedata file.
-     * @param colour       the string tag
-     * @param code         the string tag of the projection block in the lib/gamedata file
-     *                     that this resolution occurs within.
-     * @param errorCatcher a {@link ParseErrors} catcher to handle any
-     *                     errors arising during the resolution process.
-     * @return a {@link ColourType} whose name matches the case-insensitive name
-     * of a {@link ColourType}, or the case-sensitive single character colour
-     * letter code, or {@code null} if neither match.
-     * @author Rowan Crowther
-     */
-    @CheckReturnValue
-    @Nullable
-    private ColourType resolveColour(int line, @NotNull String colour, @NotNull String code,
-                                     @NotNull ParseErrors errorCatcher) {
-        ColourType result;
-
-        if (colour.length() == 1)
-            result = ColourType.findColourType(colour.charAt(0));
-        else
-            result = ColourType.findColourType(colour.toLowerCase());
-
-        if (result == null) {
-            errorCatcher.add("Unknown projection colour in Projection block: " + code +
-                    " starting on line " + line);
-        }
-
-        return result;
+        return new ParseResult<>(projections, errors);
     }
 }
